--- a/Tproject/frontend/src/App.css
+++ b/Tproject/frontend/src/App.css
@@ -1,5 +1,3 @@
-/* App.css (Dark Mode 스타일) */
-
 :root {
   --bg-color: #121212;
   --text-color: #e0e0e0;
@@ -85,7 +83,7 @@ display: flex;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh; /* 화면 세로 전체 */
+  height: 100vh; 
   background-color: #111;
   color: white;
 }
